--- a/discord-bot/discord-bot.csproj
+++ b/discord-bot/discord-bot.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.3.0" />
+    <PackageReference Include="Discord.Net.Commands" Version="2.3.0" />
+    <PackageReference Include="Discord.Net.Core" Version="2.3.0" />
+    <PackageReference Include="Discord.Net.Rest" Version="2.3.0" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="2.3.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.30" />
     <PackageReference Include="ScrapySharp" Version="3.0.0" />
   </ItemGroup>
